# asterix

./: .gitignore  CITATION.cff  CMakeLists.txt  Cargo.toml  Inno4Scale.ipynb  Makefile  README.md  block_adjust_gpu.hpp  build_fetched_libraries.sh  build_libraries.sh  common.h  definitions.h  fetch_libraries.sh  grid.cpp  grid.h  ioread.cpp  iowrite.cpp  iowrite.h  memory_report.cpp  memory_report.h  memoryallocation.cpp  memoryallocation.h  meson.build  object_wrapper.h  parameters.cpp  parameters.h  requirements.txt  spatial_batch_cpu.cpp  spatial_batch_cpu.hpp  spatial_batch_gpu.cpp  spatial_batch_gpu.hpp  spatial_batch_kernels.hpp  spatial_batch_wrapper.hpp  spatial_cell_cpu.cpp  spatial_cell_cpu.hpp  spatial_cell_gpu.cpp  spatial_cell_gpu.hpp  spatial_cell_kernels.hpp  velocity_block_container.h  velocity_mesh_gpu.h  (+3 more)
.github/workflows/: generate-reference-data-gpu.yml  generate-reference-data.yml  github-ci.yml  pr_report.yml  pr_report_gpu.yml
MAKE/: Makefile.Cooler_cuda  Makefile.Freezer  Makefile.Freezer_cuda  Makefile.appleM1  Makefile.carrington_gcc_openmpi  Makefile.harakka_vdf_compression  Makefile.hile_gpu  Makefile.karolina  Makefile.karolina_cuda  Makefile.karolina_gcc  Makefile.kstppd  Makefile.leonardo_booster  Makefile.leonardo_dcgp  Makefile.leonardo_dcgp_intel  Makefile.lumi_gnu  Makefile.lumi_hip  Makefile.lumi_hipcc  Makefile.mahti_cuda  Makefile.mahti_gcc  Makefile.ukko_a100  Makefile.ukko_cuda  Makefile.ukko_dgx
arch/: arch_device_api.h  arch_device_cuda.h  arch_device_hip.h  arch_device_host.h  gpu_base.cpp  gpu_base.hpp
datareduction/: datareducer.cpp  datareductionoperator.cpp  datareductionoperator.h
fieldsolver/: derivatives.cpp  gridGlue.cpp  ldz_electric_field.cpp  ldz_gradpe.cpp  ldz_hall.cpp  ldz_magnetic_field.cpp  ldz_main.cpp
fieldtracing/: fieldtracing.cpp  fieldtracing.h
include/: .clang-format  genericTsPool.h  linear_layer.h  matrix.h  tinyAI.h  tiny_arch_macros.h
julia_env/: Manifest.toml  Project.toml
makefiles/: make_lumi
mini-apps/ionosphereSolverTests/: Makefile  main.cpp
mini-apps/tinyAI_tests/: Makefile  image.cu  mnist.cu  moving_image.h  train.h  train_tiny.cpp  train_torch.cpp
projects/: project.cpp  project.h  projectTriAxisSearch.cpp
projects/Alfven/: Alfven.cpp  Alfven.h
projects/Diffusion/: Diffusion.cpp  Diffusion.h
projects/Dispersion/: Dispersion.cpp  Dispersion.h
projects/Distributions/: Distributions.cpp  Distributions.h
projects/Firehose/: Firehose.cpp  Firehose.h
projects/Flowthrough/: Flowthrough.cpp  Flowthrough.h
projects/Fluctuations/: Fluctuations.cfg  Fluctuations.cpp  Fluctuations.h
projects/Harris/: Harris.cpp  Harris.h
projects/IPShock/: IPShock.cpp  IPShock.h
projects/KHB/: KHB.cpp  KHB.h
projects/Larmor/: Larmor.cpp  Larmor.h
projects/LossCone/: LossCone.cfg  LossCone.cpp
projects/Magnetosphere/: Magnetosphere.cpp  Magnetosphere.h
projects/MultiPeak/: MultiPeak.cpp  MultiPeak.h
projects/Riemann1/: Riemann1.cpp  Riemann1.h
projects/Shock/: Shock.cpp  Shock.h
projects/Shocktest/: Shocktest.cpp  Shocktest.h
projects/Template/: Template.cpp  Template.h
projects/testHall/: testHall.cpp  testHall.h
projects/test_fp/: test_fp.cpp  test_fp.h
projects/verificationLarmor/: verificationLarmor.cpp  verificationLarmor.h
spatial_cells/: block_adjust_cpu.cpp  block_adjust_cpu.hpp  block_adjust_gpu.cpp  block_adjust_gpu.hpp  block_adjust_gpu_kernels.hpp  spatial_cell_cpu.cpp  spatial_cell_cpu.hpp  spatial_cell_gpu.cpp  spatial_cell_gpu.hpp  velocity_block_container.h  velocity_mesh_gpu.h  velocity_mesh_old.h
src/: image.cu  image2npy.py  image_ddp.cu  mempool.cpp  mnist.cu  npy2image.py  octree.jl  qdargparser.h  surrogate.cu  surrogate_ddp.cu  tools.py  unit_matrix.cu  vdf_compressor_nn.cu
sysboundary/: copysphere.cpp  copysphere.h  donotcompute.h  inflow.cpp  inflow.h  ionosphere.cpp  ionosphere.h  outflow.cpp  outflow.h  setmaxwellian.cpp  setmaxwellian.h  sysboundary.cpp  sysboundary.h  sysboundarycondition.cpp  sysboundarycondition.h
testpackage/: additional_test_definitions.sh  run_tests.sh  small_test_Cooler.sh  small_test_carrington.sh  small_test_carrington_github_ci.sh  small_test_hile_cpu_github_ci.sh  small_test_lumi_cpu.sh  small_test_lumi_gpu.sh  small_test_ukko_a100.sh  small_test_ukko_dgx.sh  small_test_ukko_dgx_github_ci.sh  small_test_ukko_gpu.sh  small_test_ukko_gpu_github_ci.sh  test_definitions_small.sh
testpackage/tests/Flowthrough_damr/: Flowthrough_damr.cfg
testpackage/tests/subgrid_1_diffusion/: subgrid_1_diffusion.cfg
testpackage/tests/subgrid_4_diffusion_mass/: subgrid_4_diffusion_mass.cfg
tests/: image.cu  mnist.cu  nn_io.cu  unit_matrix.cu
tools/: vdf_params.py
tools/fileHandling/: chunkDataToTape.sh  glueChunksTogether.sh
tools/slurm/: overlap_inspection.sh
vdf_compression/: compression.cpp  compression.h  compression_tools.cpp  compression_tools.h  lib.rs  network.rs
vdf_compression/cuda_mlp/: genericTsPool.h  lib.cu  linear_layer.h  matrix.h  tinyAI.h  tiny_arch_macros.h
vlasovsolver/: arch_dt.cpp  arch_moments.cpp  arch_moments.h  common_pitch_angle_diffusion.cpp  common_pitch_angle_diffusion.hpp  cpu_1d_plm.hpp  cpu_1d_ppm.hpp  cpu_1d_ppm_nonuniform.hpp  cpu_1d_ppm_nonuniform_conserving.hpp  cpu_1d_pqm.hpp  cpu_acc_intersections.cpp  cpu_acc_map.cpp  cpu_acc_map.hpp  cpu_acc_semilag.cpp  cpu_acc_semilag.hpp  cpu_acc_transform.cpp  cpu_face_estimates.hpp  cpu_moments.cpp  cpu_moments.h  cpu_pitch_angle_diffusion.cpp  cpu_pitch_angle_diffusion.h  cpu_slope_limiters.hpp  cpu_trans_map.cpp  cpu_trans_map_amr.cpp  cpu_trans_map_amr.hpp  cpu_trans_pencils.cpp  cpu_trans_pencils.hpp  cpu_vspace_diffusion.cpp  cpu_vspace_diffusion.h  gpu_acc_kernels.hpp  gpu_acc_map.cpp  gpu_acc_map.hpp  gpu_acc_semilag.cpp  gpu_acc_semilag.hpp  gpu_acc_sort_blocks.cpp  gpu_acc_sort_blocks.hpp  gpu_dt.cpp  gpu_face_estimates.hpp  gpu_moments.cpp  gpu_moments.h  (+9 more)
vlasovsolver_amr/: cpu_trans_map_amr.hpp
