[package]
name = "mlp_compress"
version = "0.1.0"
edition = "2021"
author = ["Kostis Papadakis <kpapadakis@protonmail.com>"]

[dependencies]
conv = "0.3.3"
image = "0.25.0"
nalgebra = "0.32.4"
num-traits = "0.2.18"
rand = "0.8.5"
rayon = "1.10.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
rand_distr = "0.4.3"

[lib]
path = "vdf_compression/lib.rs" 
name="mlp_compress"
crate-type = ["cdylib"]
